# MVP-Predictor

./: Makefile  Pipfile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
mvp_predictor/: data_prep.py
notebooks/: sample.ipynb
