[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mvp_predictor"
version = "0.0.1"
description = "ML project that predicts the MVP of a season. Used as practise/learning of ML pipeline for basic projects"
authors = [
  { name = "Jordan Chao" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.9.13"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mvp_predictor"]
force_sort_within_sections = true
